# bethe-faster

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: bethe-faster-config.cmake
include/: BetheFaster.h  Detector.h  DetectorHelper.h  FilterHelper.h  Particle.h  ParticleFilter.h  ParticleHelper.h  PhysicalConstants.h  PlotHelper.h  Propagator.h
libbethe-faster/: BetheFaster.h  DetectorHelper.h  FilterHelper.cc  FilterHelper.h  HitCharge.h  Particle.cc  ParticleHelper.cc  ParticleHelper.h  PhysicalConstants.h  PlotHelper.cc  PlotHelper.h  Propagator.cc  Propagator.h  QuickPidAlgorithm.cc  QuickPidAlgorithm.h  QuickPidHelper.cc  QuickPidHelper.h
src/: DetectorHelper.cc  FilterHelper.cc  Particle.cc  ParticleFilter.cc  ParticleHelper.cc  PlotHelper.cc  Propagator.cc
test/: CMakeLists.txt  Test.cc  Test.h  test.cc  test.h
